[#2653] Fix wandering spirals on mobile in Tropo Purple
What do you hooligans think this is, Uzumaki? Get outta here.

Tropo Red was immune because it was already doing something like this on mobile
as part of clearing away that gradient thing it uses on desktop.

--- a/htdocs/scss/skins/tropo/tropo-purple.scss
+++ b/htdocs/scss/skins/tropo/tropo-purple.scss
@@ -163,6 +163,12 @@ $masthead-bottom-accent-color:         $primary-color;
 
 @import "skins/tropo/tropo-base";
 
+// Hack to keep spirals from going where they don't belong.
+.main-nav:not(.expanded),
+.main-nav li.name {
+    background: $soft-accent-color;
+}
+
 footer {
     background-color: $soft-accent-color;
 }
